--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,7 @@ services:
       postgres_pass: let-me-in
       postgres_db: graph-node
       ipfs: 'ipfs:5001'
-      ethereum: 'mainnet:http://ethereum:8545'
+      ethereum: 'moonbeam:https://moonbeam.api.onfinality.io/public'
       RUST_LOG: info
       GRAPH_LOG: debug
   ipfs:
