--- a/package.json
+++ b/package.json
@@ -12,44 +12,24 @@
     "schema.graphql"
   ],
   "devDependencies": {
-    "@graphprotocol/graph-cli": "^0.20.0",
-    "@graphprotocol/graph-ts": "^0.18.1",
-    "@nomiclabs/buidler": "^1.2.0",
-    "buidler-deploy": "^0.1.18",
-    "buidler-ethers-v5": "^0.1.3",
-    "cross-env": "^7.0.2",
-    "cross-var": "^1.1.0",
-    "dotenv": "^8.2.0",
-    "dotenv-cli": "^3.1.0",
-    "ethers": "^5.0.0-beta.180",
-    "fs-extra": "^9.0.1",
-    "handlebars": "^4.7.6",
+    "@graphprotocol/graph-cli": "^0.35.0",
+    "@graphprotocol/graph-ts": "^0.28.1",
+    "@nomiclabs/buidler": "^1.4.8",
+    "buidler-deploy": "0.6.0-beta.37",
+    "buidler-ethers-v5": "0.2.3",
+    "ethers": "^5.7.1",
+    "fs-extra": "^10.1.0",
+    "handlebars": "^4.7.7",
     "newshell": "^0.1.0",
-    "npm-run-all": "^4.1.5",
-    "wait-on": "^4.0.1"
+    "npm-run-all": "^4.1.5"
   },
   "scripts": {
-    "local:setup": "wait-on http-get://127.0.0.1:8000 && graph create wighawag/eip721-subgraph --node http://127.0.0.1:8020",
+    "local:setup": "graph create moonbeam/eip721-subgraph --node http://127.0.0.1:9020",
     "codegen": "rm -Rf generated && graph codegen",
     "build": "graph build",
     "generate": "node generate.js",
-    "local:redeploy": "graph codegen && wait-on http://127.0.0.1:5001/api/v0/version http-get://127.0.0.1:8000 && graph deploy wighawag/eip721-subgraph --ipfs http://localhost:5001 --node http://127.0.0.1:8020",
-    "local:deploy": "npm-run-all \"generate mainnet 0\" local:redeploy --",
-    "mainnet:redeploy": "dotenv -- cross-var graph deploy --ipfs https://api.thegraph.com/ipfs/ --node https://api.thegraph.com/deploy/ --access-token $THEGRAPH_TOKEN wighawag/eip721-subgraph",
-    "mainnet:deploy": "npm-run-all \"generate mainnet 5806610\" mainnet:redeploy --",
-    "rinkeby:redeploy": "dotenv -- cross-var graph deploy --ipfs https://api.thegraph.com/ipfs/ --node https://api.thegraph.com/deploy/ --debug --access-token $THEGRAPH_TOKEN wighawag/eip721-subgraph-rinkeby",
-    "rinkeby:deploy": "npm-run-all \"generate rinkeby 0\" rinkeby:redeploy --",
-    "kovan:redeploy": "dotenv -- cross-var graph deploy --ipfs https://api.thegraph.com/ipfs/ --node https://api.thegraph.com/deploy/ --debug --access-token $THEGRAPH_TOKEN wighawag/eip721-subgraph-kovan",
-    "kovan:deploy": "npm-run-all \"generate kovan 0\" kovan:redeploy --",
-    "externals:down": "docker-compose down -v",
-    "externals": "docker-compose up",
-    "shell:externals": "newshell \"npm run externals\"",
-    "local:contracts": "wait-on tcp:8545 && buidler --network localhost deploy --export ./contracts.json",
-    "local:dev": "npm-run-all -l --parallel local:contracts local:deploy",
-    "local:setup:deploy": "npm-run-all -l local:setup local:dev",
-    "setup": "npm-run-all -l externals:down --parallel shell:externals local:setup",
-    "dev": "npm-run-all -l externals:down --parallel externals local:setup:deploy",
-    "shell:dev": "npm-run-all -l externals:down --parallel shell:externals local:setup:deploy",
-    "run:local": "cross-env BUIDLER_NETWORK=localhost node"
+    "local:redeploy": "graph codegen && graph deploy moonbeam/eip721-subgraph --ipfs http://localhost:5001 --node http://127.0.0.1:9020",
+    "local:deploy": "npm-run-all \"generate moonbeam 0\" local:redeploy --",
+    "deploy": "npm-run-all -l local:setup local:deploy"
   }
 }
