--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,43 +1,20 @@
 version: '3'
 services:
   graph-node:
-    image: graphprotocol/graph-node
+    image: graphprotocol/graph-node:latest
     ports:
-      - '8000:8000'
-      - '8001:8001'
-      - '8020:8020'
-      - '8030:8030'
-      - '8040:8040'
-    depends_on:
-      - ethereum
-      - ipfs
-      - postgres
+      - '9000:8000'
+      - '9001:8001'
+      - '9020:8020'
+      - '9030:8030'
+      - '9040:8040'
     environment:
-      postgres_host: postgres
-      postgres_user: graph-node
-      postgres_pass: let-me-in
-      postgres_db: graph-node
-      ipfs: 'ipfs:5001'
+      postgres_host: 172.17.0.1
+      postgres_user: postgres
+      postgres_pass: moneymoneyHOME888
+      postgres_db: graphnode_moonbeam
+      ipfs: '172.17.0.1:5001'
       ethereum: 'moonbeam:https://moonbeam.api.onfinality.io/public'
       RUST_LOG: info
-      GRAPH_LOG: debug
-  ipfs:
-    image: ipfs/go-ipfs
-    ports:
-      - '5001:5001'
-    environment: 
-      IPFS_PATH: /tmp
-  postgres:
-    image: postgres
-    ports:
-      - '5432:5432'
-    command: ["postgres", "-cshared_preload_libraries=pg_stat_statements"]
-    environment:
-      POSTGRES_USER: graph-node
-      POSTGRES_PASSWORD: let-me-in
-      POSTGRES_DB: graph-node
-      PGDATA: /tmp
-  ethereum:
-    image: trufflesuite/ganache-cli:latest
-    ports:
-      - "8545:8545"
+      #  GRAPH_ALLOW_NON_DETERMINISTIC_IPFS: 'true'
+      GRAPH_LOG: info
